# medicine-record

./: .gitignore  CMakeLists.txt  Readme.md
data/: horario.txt  incompatibilidades.txt  medicamentos.txt
src/: HorarioGenerator.cpp  HorarioGenerator.h  Incompatibilidad.cpp  Incompatibilidad.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Medicamento.cpp  Medicamento.h  main.cpp
